# 配下のパッケージでCargo.tomlを分けたい & IntelliJのプロジェクトは分けたくないので、
# 各パッケージをワークスペースにまとめる
# <Cargoのワークスペース>
# https://doc.rust-jp.rs/book/second-edition/ch14-03-cargo-workspaces.html
# * `Cargo.lock` は親ディレクトリ(rust)に集約される（各パッケージで共有する）
# * `target` ディレクトリ(出力ディレクトリ)も親ディレクトリに集約される
[workspace]
members = [
  "book-algorithmer",
  "book-introduction-to-concurrent-programming",
  "book-procon",
  "book-socket-programming",
  "algorithms",
  "async-await",
  "cargo-bench",
  "conditional-compoilation",
  "coursera-algorithmic-toolbox/week1-2-maximum-pairwise-product",
  "crate-bytes",
  "crate-chrono",
  "crate-criterion",
  "crate-dhat",
  "crate-env_logger",
  "crate-futures",
  "crate-lazy_static",
  "crate-lru_time_cache",
  "crate-parking_lot",
  "crate-quickcheck",
  "crate-rand",
  "crate-reqwest",
  "crate-rust-protobuf",
  "crate-uint",
  "crate-tokio",
  "crate-tracing",
  "crate-trust-dns",
  "generics",
  "leetcode",
  "level-db",
  "lru-time-cache",
  "primitives-stdlibs",
  "references-borrowing",
  "threading",
  "tower-of-hanoi"
]

# dhat利用時に入れた設定
# https://docs.rs/dhat/0.2.2/dhat/#configuration
[profile.release]
 debug = 1
