# 配下のパッケージでCargo.tomlを分けたい & IntelliJのプロジェクトは分けたくないので、
# 各パッケージをワークスペースにまとめる
# <Cargoのワークスペース>
# https://doc.rust-jp.rs/book/second-edition/ch14-03-cargo-workspaces.html
# * `Cargo.lock` は親ディレクトリ(rust)に集約される（各パッケージで共有する）
# * `target` ディレクトリ(出力ディレクトリ)も親ディレクトリに集約される
[workspace]
members = [
  "book-algorithmer",
  "book-introduction-to-concurrent-programming",
  "book-procon",
  "book-socket-programming",
  "algorithms",
  "async-await",
  "cargo-bench",
  "conditional-compoilation",
  "coursera-algorithmic-toolbox/week1-2-maximum-pairwise-product",
  "coursera-algorithmic-toolbox/week2-1-fibonacci-number",
  "coursera-algorithmic-toolbox/week2-2-last-digit-of-a-large-fibonacci-number",
  "coursera-algorithmic-toolbox/week2-3-greatest-common-divisor",
  "coursera-algorithmic-toolbox/week2-4-least-common-multiple",
  "coursera-algorithmic-toolbox/week3-1-money-change",
  "coursera-algorithmic-toolbox/week3-2-maximum-value-of-the-loot",
  "coursera-algorithmic-toolbox/week3-3-car-fueling",
  "coursera-algorithmic-toolbox/week4-1-binary-search",
  "coursera-algorithmic-toolbox/week4-3-majority-element",
  "coursera-algorithmic-toolbox/week4-4-improving-quick-sort",
  "coursera-algorithmic-toolbox/week5-1-money-change-again",
  "coursera-algorithmic-toolbox/week5-2-primitive-calculator",
  "coursera-algorithmic-toolbox/week5-3-edit-distance",
  "coursera-algorithmic-toolbox/week6-1-maximum-amount-of-gold",
  "coursera-algorithmic-toolbox/week6-2-partition-souvenirs",
  "coursera-algorithms-on-graphs/week1-1-finding-an-exit-from-a-maze",
  "coursera-algorithms-on-graphs/week2-1-checking-consistency-of-cs-curriculum",
  "coursera-algorithms-on-graphs/week2-2-determining-an-order-of-courses",
  "coursera-algorithms-on-graphs/week3-1-computing-the-minimum-number-of-flight-segments",
  "coursera-algorithms-on-graphs/week4-1-computing-the-minimum-cost-of-a-flight",
  "coursera-algorithms-on-graphs/week4-2-detecting-anomalies-in-currency-exchange-rates",
  "coursera-algorithms-on-graphs/week5-1-building-roads-to-connect-cities",
  "coursera-data-structures/week1-1-check-brackets-in-the-code",
  "coursera-data-structures/week1-2-compute-tree-height",
  "coursera-data-structures/week3-1-convert-array-into-heap",
  "coursera-data-structures/week3-2-parallel-processing",
  "coursera-data-structures/week4-1-phone-book",
  "coursera-data-structures/week4-2-hashing-with-chains",
  "coursera-data-structures/week6-1-binary-tree-traversals",
  "coursera-data-structures/week6-2-is-it-a-binary-search-tree",
  "coursera-data-structures/week6-3-is-it-a-binary-search-tree-hard-version",
  "crate-bytes",
  "crate-chrono",
  "crate-criterion",
  "crate-dhat",
  "crate-env_logger",
  "crate-futures",
  "crate-lazy_static",
  "crate-lru_time_cache",
  "crate-parking_lot",
  "crate-prometheus-client_rust",
  "crate-psutil",
  "crate-quickcheck",
  "crate-rand",
  "crate-reqwest",
  "crate-rust-protobuf",
  "crate-serde",
  "crate-sysinfo",
  "crate-uint",
  "crate-tokio",
  "crate-tokio_echo-server",
  "crate-tokio_oneshot",
  "crate-tokio_spawn-blocking",
  "crate-tracing",
  "crate-trust-dns",
  "leetcode",
  "level-db",
  "lru-time-cache",
  "primitives-stdlibs",
  "threading",
  "tower-of-hanoi"
]

# 単独のバイナリや、特定のチュートリアルを行う関係で Cargo.lock を共有したくないクレートを指定している
exclude = [
  "book-proc-macro-workshop",
  "crate-async-std",
  "crate-clap",
  "crate-influxdb",
  "crate-tokio-console",
  "crate-testground-sdk-rust",
]

# dhat利用時に入れた設定
# https://docs.rs/dhat/0.2.2/dhat/#configuration
[profile.release]
 debug = 1
