[package]
name = "book-proc-macro-workshop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "tests"
path = "tests/progress.rs"

[lib]
# [lib] についてのドキュメント
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#library
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }
