[package]
name = "crate-critcmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prometheus-client-iter = { git = "https://github.com/mxinden/client_rust.git", rev = "87f0e217fb163469850c7e4be722d6c466cca6f8", features = ["protobuf"], package = "prometheus-client" }
prometheus-client-vec = { git = "https://github.com/ackintosh/client_rust.git", rev = "2c16ebc31cb8b2d36a6fb7d49308f87f11ff2558", features = ["protobuf"], package = "prometheus-client" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "critcmp"
harness = false
