[package]
name = "crate-critcmp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# before (vec)
#prometheus-client = { git = "https://github.com/ackintosh/client_rust.git", rev = "2c16ebc31cb8b2d36a6fb7d49308f87f11ff2558", features = ["protobuf"] }
# after (iter)
prometheus-client = { git = "https://github.com/ackintosh/client_rust.git", rev = "98ffcc28d51364fab1ce6dc68c229466642d632d", features = ["protobuf"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "critcmp"
harness = false
