[package]
name = "crate-criterion"
version = "0.1.0"
authors = ["ackintosh <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Criterion
# https://github.com/bheisler/criterion.rs#quickstart

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "my_benchmark"
harness = false
