[package]
name = "crate-influxdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
influxdb = { version = "0.5.2", features = ["derive"] }
tokio = { version = "1.18.4", features = ["rt-multi-thread"] }
