[package]
name = "crate-opentelemetry"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
opentelemetry = "0.30"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic", "tls-roots"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
tracing-opentelemetry = "0.31"
#tracing-subscriber = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }

#[dev-dependencies]
#tracing-subscriber = "0.3"
