[package]
name = "crate-parking_lot"
version = "0.1.0"
authors = ["ackintosh <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.11"
tokio = { version = "1.0", features = ["macros", "rt", "time"] }
