[package]
name = "crate-reqwest"
version = "0.1.0"
authors = ["ackintosh <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["json", "native-tls"] }
tokio = { version = "1.0", features = ["full"] }
