[package]
name = "crate-rust-protobuf"
version = "0.1.0"
authors = ["ackintosh <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[build-dependencies]
protoc-rust = "2.22.0"

[dependencies]
protobuf = "2.22.0"
chrono = "0.4"
