[package]
name = "crate-tokio-console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# featuresに "rt-multi-thread" を入れないと下記コンパイルエラー
# error: The default runtime flavor is `multi_thread`, but the `rt-multi-thread` feature is disabled.
# -> flavor を変えればエラーは変わるかもしれない
tokio = { version = "1.17", features = ["sync", "time", "macros", "tracing", "rt-multi-thread"] }
console-subscriber = "0.1.3"
futures = "0.3.21"
num_cpus = "1.13.1"
