[package]
name = "crate-tokio"
version = "0.1.0"
authors = ["akihito.nakano <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3.1"
rand = "0.7.3"
tokio = { version = "1.0", features = ["full", "time"] }
tokio-stream = "0.1"
