[package]
name = "crate-tokio_framed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.2", features = ["full"] }
tokio-stream = "0.1.8"
