[package]
name = "crate-tokio_framed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"

# `futures::sink::SinkExt` を使うために導入
# これによって下記が可能になる
# let mut framed = Framed::new( ...
# framed.send()
futures = "0.3.21"

tokio = { version = "1.18.2", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
tokio-stream = "0.1.8"
