[package]
name = "crate-trust-dns"
version = "0.1.0"
authors = ["akihito.nakano <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trust-dns-resolver = "0.20.0"
trust-dns-client = "0.20.0"

# used in async usage
tokio = { version = "1.0", features = ["full"] }
