[package]
name = "leetcode"
version = "0.1.0"
authors = ["ackintosh <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dhat = "0.2.2"

# ルートの Cargo.toml ではないので、ここに下記の profile の設定を入れると、ビルド時に警告が出る
# warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
# package:   /Users/abi01357/src/github.com/ackintosh/sandbox/rust/crate-dhat/Cargo.toml
# workspace: /Users/abi01357/src/github.com/ackintosh/sandbox/rust/Cargo.toml

# [profile.release]
# debug = 1
