[package]
name = "primitives-proc-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# [lib] についてのドキュメント
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#library
# https://doc.rust-lang.org/cargo/reference/cargo-targets.html#configuring-a-target
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
